<resources>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">%1$s won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">%1$s won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="nationLocation1">Afghanistan</string>
    <string name="nationLocation2">Alaska</string>
    <string name="nationLocation3">Albania</string>
    <string name="nationLocation4">Algeria</string>
    <string name="nationLocation5">Andorra</string>
    <string name="nationLocation6">Angola</string>
    <string name="nationLocation7">Anguilla (United Kingdom)</string>
    <string name="nationLocation8">Antigua and Barbuda</string>
    <string name="nationLocation9">Argentina</string>
    <string name="nationLocation10">Armenia</string>
    <string name="nationLocation11">Aruba</string>
    <string name="nationLocation12">Ascension (United Kingdom)</string>
    <string name="nationLocation13">Australia</string>
    <string name="nationLocation14">Austria</string>
    <string name="nationLocation15">Azerbaijan</string>
    <string name="nationLocation16">Bahrain</string>
    <string name="nationLocation17">Bangladesh</string>
    <string name="nationLocation18">Barbados</string>
    <string name="key_prefs_share">share</string>
    <string name="key_prefs_cat_import">import</string>
    <string name="key_prefs_import_from_storage">importFromStorage</string>
    <string name="key_prefs_import_from_storage_divider">importFromStorageDivider</string>
    <string name="key_prefs_import_from_sim">importFromSIM</string>
    <string name="key_prefs_import_from_sim_divider">importFromSIMDivider</string>
    <string name="key_prefs_import_from_sim1">importFromSIM1</string>
    <string name="key_prefs_import_from_sim1_divider">importFromSIM1Divider</string>
    <string name="key_prefs_import_from_sim2">importFromSIM2</string>
    <string name="key_prefs_import_from_sim2_divider">importFromSIM2Divider</string>
    <string name="key_prefs_import_via_Bt">importViaBt</string>
    <string name="key_prefs_import_via_Bt_divider">importViaBtDivider</string>
    <string name="key_prefs_contacts_account_divider">contactsAccount</string>
    <string name="key_prefs_contacts_yellowpage_update_divider">contactsYellowpageUpdate</string>
    <string name="key_prefs_import_from_qq">importFromQQ</string>
    <string name="key_prefs_cat_export">export</string>
    <string name="key_prefs_export_to_storage">exportToStorage</string>
    <string name="key_prefs_export_to_sim">exportToSIM</string>
    <string name="key_prefs_export_to_sim_divider">exportToSIMDivider</string>
    <string name="key_prefs_export_to_sim1">exportToSIM1</string>
    <string name="key_prefs_export_to_sim1_divider">exportToSIM1Divider</string>
    <string name="key_prefs_export_to_sim2">exportToSIM2</string>
    <string name="key_prefs_export_to_sim2_divider">exportToSIM2Divider</string>
    <string name="key_prefs_copy">copy</string>
    <string name="contact_menu_search">Search</string>
    <string name="menu_editContact">Edit</string>
    <string name="menu_deleteContact">Delete</string>
    <string name="titleJoinContactDataWith">Join contacts</string>
    <string name="menu_redirect_calls_to_vm">All calls to voicemail</string>
    <string name="menu_done">Done</string>
    <string name="menu_doNotSave">Cancel</string>
    <string name="pickerNewContactText">Create new contact</string>
    <string name="recentCalls_deleteAll">Clear call log</string>
    <string name="recentCalls_trashVoicemail">Delete voicemail</string>
    <string name="import_from_sdcard">Import from storage</string>
    <string name="export_to_sdcard">Export to storage</string>
    <string name="dial_settings">Settings</string>
    <string name="str_menu_call_record">Record call</string>
    <string name="menu_accounts">Accounts</string>
    <string name="display_options_sort_list_by">Sort list by</string>
    <string name="display_options_view_names_as">View contact names as</string>
    <string name="contact_menu_select_all">Select all</string>
    <string name="preference_displayOptions">Display options</string>
    <string name="non_phone_add_to_contacts">Add to contacts</string>
    <string name="copy_from_account">Copy contacts</string>
    <string name="copy_to_label">Copy</string>
    <string name="str_ok">OK</string>
    <string name="strImportFromQQSync">Import from QQSync</string>
    <string name="contact_saveto_existed_contact">Save to existing contact</string>
    <string name="menu_create_contact_shortcut">Create shortcut</string>
    <string name="IPCall">IP call</string>
    <string name="merge_duplicated_contacts">Merge duplicate contacts</string>
    <string name="title_prefs_cat_import">Import</string>
    <string name="title_prefs_cat_export">Export</string>
    <string name="summary_prefs_import_storage">Import vCard from internal storage or SD card</string>
    <string name="summary_prefs_export_to_storage">Export to internal storage or SD card as vCard</string>
    <string name="summary_prefs_copy_contacts">Copy contacts to another account</string>
    <string name="contact_menu_add_to_blacklist">Add to blacklist</string>
    <string name="recentCalls_editBeforeCall">Edit before call</string>
    <string name="menu_privacy_protection">Privacy protection</string>
    <string name="contacts_title_menu">More</string>
    <string name="recentCalls_sendNumberByMMS">Send number</string>
    <string name="menu_harassment_filter">Harassment filter</string>
    <string name="import_another_device_option">Import from another phone</string>
    <string name="str_delete_call_log_entry">Delete entry</string>
    <string name="menu_mark_as">Mark as</string>
    <string name="string_separate_contacts">Separate contacts</string>
    <string name="str_tianyi_dialer_menu_option">Surfing Dialer</string>
    <string name="update_cc_title">Auto-update contact card template</string>
    <string name="update_yp_title">Auto-update yellow pages</string>
    <string name="update_call_locations_title">Update call locations</string>
    <string name="location_data_manual_update_setting">Manual</string>
    <string name="location_data_manual_update_setting_option">Manual update</string>
    <string name="location_data_auto_update_setting">Auto</string>
    <string name="location_data_auto_update_setting_option">Auto-update</string>
    <string name="location_data_auto_update_setting_wlan_only">Update via WLAN only</string>
    <string name="contact_menu_share_contacts">Share contact</string>
    <string name="contacts_starred">Favorite</string>
    <string name="camcard_card">Contact cards</string>
    <string name="camcard_precise_title">Accurate identification</string>
    <string name="camcard_about">About</string>
    <string name="lang_recognize">Supported languages</string>
    <string name="menu_delete_contact">Delete contact</string>
    <string name="contacts_missing_items">Contacts with incomplete info</string>
    <string name="contacts_missing_items_notes">Contacts that lack names, phone numbers, or emails</string>
    <string name="contacts_batch_delete">Delete contacts by batch</string>
    <string name="contacts_rebuild_index_title">Rebuild index data</string>
    <string name="contact_menu_detail_reset_mark">Erase traces</string>
    <string name="contact_yellowpage_title">Yellow pages</string>
    <string name="contacts_rebuild_index_summary">Rebuilding may take a few minutes to complete to resolve your search issue</string>
    <string name="profile_dialog_share_contacts">Share</string>
    <string name="contact_menu_share_contacts_prefs">Share contact</string>
</resources>