<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/androidhwext">
    <PreferenceCategory androidhwext:title="@string/title_prefs_cat_import" androidhwext:key="@string/key_prefs_cat_import" androidhwext:order="@integer/prefs_cat_order_import">
        <Preference androidhwext:title="@string/import_from_sdcard" androidhwext:key="@string/key_prefs_import_from_storage" androidhwext:summary="@string/summary_prefs_import_storage" androidhwext:order="@integer/prefs_order_import_from_sd_card" androidhwext:widgetLayout="@layout/preference_widget_arrow" androidhwext:preferenceID="@+id/prefs_import_from_storage" />
        <Preference androidhwext:layout="@layout/listdivider" androidhwext:key="@string/key_prefs_import_from_storage_divider" androidhwext:order="@integer/prefs_order_import_from_sd_card_divider" androidhwext:preferenceID="@+id/prefs_import_from_storage_divider" />
        <Preference androidhwext:title="" androidhwext:key="@string/key_prefs_import_from_sim" androidhwext:order="@integer/prefs_order_import_from_sim" androidhwext:widgetLayout="@layout/preference_widget_arrow" androidhwext:preferenceID="@+id/prefs_import_from_sim" />
        <Preference androidhwext:layout="@layout/listdivider" androidhwext:key="@string/key_prefs_import_from_sim_divider" androidhwext:order="@integer/prefs_order_import_from_sim_divider" androidhwext:preferenceID="@+id/prefs_import_from_sim_divider" />
        <Preference androidhwext:title="" androidhwext:key="@string/key_prefs_import_from_sim1" androidhwext:order="@integer/prefs_order_import_from_sim1" androidhwext:widgetLayout="@layout/preference_widget_arrow" androidhwext:preferenceID="@+id/prefs_import_from_sim1" />
        <Preference androidhwext:layout="@layout/listdivider" androidhwext:key="@string/key_prefs_import_from_sim1_divider" androidhwext:order="@integer/prefs_order_import_from_sim1_divider" androidhwext:preferenceID="@+id/prefs_import_from_sim1_divider" />
        <Preference androidhwext:title="" androidhwext:key="@string/key_prefs_import_from_sim2" androidhwext:order="@integer/prefs_order_import_from_sim2" androidhwext:widgetLayout="@layout/preference_widget_arrow" androidhwext:preferenceID="@+id/prefs_import_from_sim2" />
        <Preference androidhwext:layout="@layout/listdivider" androidhwext:key="@string/key_prefs_import_from_sim2_divider" androidhwext:order="@integer/prefs_order_import_from_sim2_divider" androidhwext:preferenceID="@+id/prefs_import_from_sim2_divider" />
        <Preference androidhwext:title="@string/import_another_device_option" androidhwext:key="@string/key_prefs_import_via_Bt" androidhwext:order="@integer/prefs_order_import_via_bt" androidhwext:widgetLayout="@layout/preference_widget_arrow" androidhwext:preferenceID="@+id/prefs_import_via_bt" />
        <Preference androidhwext:layout="@layout/listdivider" androidhwext:key="@string/key_prefs_import_via_Bt_divider" androidhwext:order="@integer/prefs_order_import_via_bt_divider" androidhwext:preferenceID="@+id/prefs_import_via_bt_divider" />
        <Preference androidhwext:title="@string/strImportFromQQSync" androidhwext:key="@string/key_prefs_import_from_qq" androidhwext:order="@integer/prefs_order_import_from_qq" androidhwext:widgetLayout="@layout/preference_widget_arrow" androidhwext:preferenceID="@+id/prefs_import_from_qq" />
    </PreferenceCategory>
    <PreferenceCategory androidhwext:title="@string/title_prefs_cat_export" androidhwext:key="@string/key_prefs_cat_export" androidhwext:order="@integer/prefs_cat_order_export">
        <Preference androidhwext:title="@string/export_to_sdcard" androidhwext:key="@string/key_prefs_export_to_storage" androidhwext:summary="@string/summary_prefs_export_to_storage" androidhwext:order="@integer/prefs_order_export_to_sd_card" androidhwext:widgetLayout="@layout/preference_widget_arrow" androidhwext:preferenceID="@+id/prefs_export_to_storage" />
        <Preference androidhwext:layout="@layout/listdivider" androidhwext:order="@integer/prefs_order_export_to_sd_card_divider" androidhwext:preferenceID="@+id/prefs_export_to_storage_divider" />
        <Preference androidhwext:title="" androidhwext:key="@string/key_prefs_export_to_sim" androidhwext:order="@integer/prefs_order_export_to_sim" androidhwext:widgetLayout="@layout/preference_widget_arrow" androidhwext:preferenceID="@+id/prefs_export_to_sim" />
        <Preference androidhwext:layout="@layout/listdivider" androidhwext:key="@string/key_prefs_export_to_sim_divider" androidhwext:order="@integer/prefs_order_export_to_sim_divider" androidhwext:preferenceID="@+id/prefs_export_to_sim_divider" />
        <Preference androidhwext:title="" androidhwext:key="@string/key_prefs_export_to_sim1" androidhwext:order="@integer/prefs_order_export_to_sim1" androidhwext:widgetLayout="@layout/preference_widget_arrow" androidhwext:preferenceID="@+id/prefs_export_to_sim1" />
        <Preference androidhwext:layout="@layout/listdivider" androidhwext:key="@string/key_prefs_export_to_sim1_divider" androidhwext:order="@integer/prefs_order_export_to_sim1_divider" androidhwext:preferenceID="@+id/prefs_export_to_sim1_divider" />
        <Preference androidhwext:title="" androidhwext:key="@string/key_prefs_export_to_sim2" androidhwext:order="@integer/prefs_order_export_to_sim2" androidhwext:widgetLayout="@layout/preference_widget_arrow" androidhwext:preferenceID="@+id/prefs_export_to_sim2" />
        <Preference androidhwext:layout="@layout/listdivider" androidhwext:key="@string/key_prefs_export_to_sim2_divider" androidhwext:order="@integer/prefs_order_export_to_sim2_divider" androidhwext:preferenceID="@+id/prefs_export_to_sim2_divider" />
        <Preference androidhwext:title="@string/contact_menu_share_contacts_prefs" androidhwext:key="@string/key_prefs_share" androidhwext:order="@integer/prefs_order_share" androidhwext:widgetLayout="@layout/preference_widget_arrow" androidhwext:preferenceID="@+id/prefs_share" />
        <Preference androidhwext:layout="@layout/listdivider" androidhwext:order="@integer/prefs_order_share_divider" androidhwext:preferenceID="@+id/prefs_share_divider" />
    </PreferenceCategory>
</PreferenceScreen>
